[fixes #34781935] Fix document file name alignment on dashboard

--- a/app/assets/stylesheets/partials/_tables.sass
+++ b/app/assets/stylesheets/partials/_tables.sass
@@ -235,8 +235,10 @@ table.data
         text-decoration: underline
   a
     &.tooltip
-      text-decoration: underline !important
-      font-weight: normal !important
+      text-decoration: underline
+      font-weight: normal
+      font-size: 12px
+      vertical-align: top
 
   tbody
     tr td
